# cpp_robotics

./: .gitignore  404.html  CMakeLists.txt  Doxyfile  README.md  controller.hpp  filter.hpp  gen_doc.sh  geometry.hpp  idea_note.md  index.html  main.py  mkdocs.yml  motor.hpp  sitemap.xml  spline.hpp  system.hpp  units.hpp  utility.hpp  vector.hpp
.github/workflows/: build.yaml  deploy_docs.yaml  documentation.yaml
api/api/: index.html
benchmark/: build_time.cpp  quadprog.cpp
benckmark/: build_time.cpp  eigen_arg_ret.cpp
doc/algorithm/: ndt.md
doc/optimize/: tolerances_and_stopping.md
doc/system/: place.md
docs/: impl_memo.md  index.md
docs/api/: api.md
docs/doxybook/: classes.md  examples.md  files.md  groups.md  namespaces.md  related_pages.md
docs/doxybook/Classes/: classcpp__robotics_1_1AccelerationLimitFilter.md  classcpp__robotics_1_1AccelerationLimitFilter_1_1DiffTri.md  classcpp__robotics_1_1ActiveSetMethod.md  classcpp__robotics_1_1AngleRange.md  classcpp__robotics_1_1AutoDiffAdaptor.md  classcpp__robotics_1_1BandPassFilter.md  classcpp__robotics_1_1ButterworthFilter.md  classcpp__robotics_1_1CatumullRom2D.md  classcpp__robotics_1_1ConstraintArray.md  classcpp__robotics_1_1CubicSpline.md  classcpp__robotics_1_1DelayFilter.md  classcpp__robotics_1_1DeltaRobotIk.md  classcpp__robotics_1_1Differentiator.md  classcpp__robotics_1_1Discret.md  classcpp__robotics_1_1DiscretTransferFunction.md  classcpp__robotics_1_1DiscreteTransferFunction.md  classcpp__robotics_1_1DiscreteTransferFunction_1_1CircularBuffer.md  classcpp__robotics_1_1DubinsPath.md  classcpp__robotics_1_1ExtendedKalmanFilter.md  classcpp__robotics_1_1FilterConnector.md  classcpp__robotics_1_1FilterStateHolder.md  classcpp__robotics_1_1HighPassFilter.md  classcpp__robotics_1_1Integrator.md  classcpp__robotics_1_1KDTree.md  classcpp__robotics_1_1KMeansMethod.md  classcpp__robotics_1_1KMeansModel.md  classcpp__robotics_1_1KalmanFilter.md  classcpp__robotics_1_1LinearMPC.md  classcpp__robotics_1_1LinearRegulatorMPC.md  classcpp__robotics_1_1LowPassFilter.md  classcpp__robotics_1_1MecanumIk.md  classcpp__robotics_1_1NDT2d.md  classcpp__robotics_1_1NctfController.md  classcpp__robotics_1_1NotchFilter.md  classcpp__robotics_1_1Omni3Ik.md  classcpp__robotics_1_1Omni4Ik.md  classcpp__robotics_1_1PID.md  classcpp__robotics_1_1PID2.md  classcpp__robotics_1_1PID2Controller.md  classcpp__robotics_1_1PIDController.md  (+108 more)
docs/example/: hello_world.md  template.md
doxybook/classes/: index.html
doxybook/examples/: index.html
doxybook/files/: index.html
doxybook/groups/: index.html
doxybook/namespaces/: index.html
doxybook/related_pages/: index.html
doxybook2/: README.md  config.json  setup.sh
example/: hello_world.cpp
example/algorithm/: icp_sample.cpp  kdtree_sample.cpp  mahalanobis.cpp  random_example.cpp
example/arm_kinematics/: 3dof_arm.cpp
example/controller/: alilqr_cartpole_example.cpp  alilqr_diffbot_example.cpp  alilqr_example.cpp  autodiff_example.cpp  canonicalize.cpp  ilqr_diffbot_example.cpp  ilqr_example.cpp  ilqr_linear_example.cpp  linear_mpc.cpp  lqr.cpp  motor_pid_control.cpp  nctf_example.cpp  observer_example.cpp  pid_vs_nctf.cpp  place.cpp  vrft.cpp  vrft_pid.cpp
example/filter/: hpf_step.cpp  lpf.cpp  lpf_step.cpp  vel_limit_filter.cpp
example/hello_world/: index.html
example/optimize/: active_set_method_example.cpp  bfgs_test.cpp  optimize.cpp  optimize_rosenbrock.cpp  optimize_scalar.cpp  optimize_with_constraint.cpp  optimize_without_constraint.cpp  quadprog.cpp  sqp_example.cpp
example/path_planning/: dubins_path.cpp  dwa.cpp  fmt_star.cpp  grid_map_gen.py  navigation_diffbot.cpp  spline.cpp
example/system/: bode_nyquist.cpp  disc_tf.cpp  link_robot.cpp  state_space_system.cpp  step_responce.cpp  system.cpp
example/template/: index.html
example/unit/: unit_example.cpp
example/units/: unit_test.cpp
impl_memo/: index.html
include/cpp_robotics/: algorithm.hpp  chassis.hpp  controller.hpp  core.hpp  cpp_robotics.hpp  filter.hpp  geometry.hpp  matplotlibcpp.hpp  motor.hpp  optimize.hpp  path_planning.hpp  system.hpp  unit.hpp  utility.hpp  vector.hpp
overrides/: main.html
performance_test/: autodiff.cpp
search/: search_index.json
src/: cppsupport.hpp
src/controller/: lqr.hpp  pid.hpp  pid2.hpp  pure_pursuit.hpp
src/external_lib/: matplotlibcpp.h
src/filter/: filter.hpp  kalman_filter.hpp
src/geometry/: geometry.hpp  shape.hpp
src/motor/: dc_motor_param.hpp  motor_list.hpp
src/spline/: spline.hpp
src/system/: bode.hpp  discret.hpp  polynomial.hpp  state_space_system.hpp  time_responce.hpp  transfer_function.hpp
src/units/: unit_core.hpp
src/utility/: angle_range.hpp  math_utils.hpp  space.hpp
src/vector/: quaternion.hpp  transform.hpp  vector2.hpp  vector3.hpp
test/: template.cpp.md  test_utility.hpp
test/algorithm/: auto_diff_test.cpp  icp_test.cpp  k_means_test.cpp  poly_regression.cpp  poly_regression_test.cpp  random_test.cpp
test/arm_ik/: xy_2deg_robot_test.cpp
test/arm_kinematics/: xy_2link_robot_test.cpp
test/chassis/: mecanum_test.cpp  omni_test.cpp  swerve_test.cpp
test/common/: lib_test.cpp
test/controller/: pfc_test.cpp  pid2_test.cpp  pid_test.cpp  psmc_test.cpp  vrft_test.cpp
test/eigen_support/: auto_diff_test.cpp
test/filter/: extended_kalman_filter_test.cpp  tf_filter_test.cpp
test/geometry/: geometry_test.cpp  shape_test.cpp
test/optimize/: bfgs_test.cpp  breacketing_search_test.cpp  fmin_search_test.cpp  quadprog_benchmark_test.cpp  quadprog_test.cpp  sqp_test.cpp
test/system/: discret_tf_test.cpp  polynomial_test.cpp  time_responce_test.cpp  transfer_function_test.cpp
test/utility/: random_test.cpp  singleton_test.cpp
unsupported/: filter_connector.hpp  ipopt_example.cpp  misc.hpp  print.hpp  state_machine.hpp
unsupported/arm_ik/: arm_ik.hpp  delta_robot.hpp
unsupported/link_robot/: link_robot_test.cpp
unsupported/optimize/: active_set_method_example.cpp  lesi_doc.hpp  linprog.hpp
unsupported/path_planning/: dwa.hpp
unsupported/xy_2deg_robot/: xy_2deg_robot.hpp
(+932 files in other folders)
